# OpenGiraffe

./: .env.example  .gitignore  README.md  app.py  main.py  mini-trip-mobile.html  mini-trip.html  pyproject.toml  requirements.txt
backend/: server_mobile_minimal.py
docs/: DEPLOY.md
frontend/trip/: mini-trip-mobile.html
scripts/: run_api.sh
src/: __init__.py  container.py
src/agents/: __init__.py  base.py
src/api/: server.py
src/common/: exceptions.py  logging.py
src/config/: settings.py
src/domain/: __init__.py  chat.py  message.py
src/providers/: base.py  openai_compat.py
src/rag/: __init__.py  base.py
src/ui/: gradio_app.py
yang-trip/: .env.example  .gitignore
yang-trip/backend/: server.py  server_mobile_minimal.py
yang-trip/docs/: MINIMAL-DEPLOY.md
yang-trip/scripts/: pack-minimal-deploy.sh  run_ui.sh
