[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-app"
version = "0.1.0"
description = "Decoupled AI chat application with FastAPI, Gradio, ready for crewai and ragflow"
authors = []
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
